--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+ min-height: 100vh;
 }
 
 h1 {
@@ -81,12 +81,14 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-height: 50vh;
   padding: 12px 18px;
   background-color: var(--mint);
   border-radius: 8px;
   box-shadow: 0 0 8px 0 var(--black);
   margin-top: 24px;
   text-align: center;
+  overflow-y: auto;
 }
 
 .history-container h2 {
